# main_project

./: .env  README.md  main.py  pyproject.toml
src/: decorators.py  external_api.py  file_reader.py  generators.py  masks.py  processing.py  search_transactions.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
